# api-framework-comparison

./: .gitignore  README.md  api-framework-comparison.sln  create_postgres_data.py  docker-compose-figure.excalidraw  docker-compose.yaml  models.py  requirements.txt
asp-entity/: Dockerfile  Program.cs  README.md  appsettings.json  asp-entity.csproj
asp-entity/Properties/: launchSettings.json
fastapi-psycopg2/: Dockerfile  README.md  api.py
fastapi-sqlalchemy/: README.md  api.py  models.py  requirements.txt
genie-genieorm/: rest.jl
gin-gorm/: README.md  go.mod  go.sum  main.go  orm.go
gin-gorm/docs/: docs.go
ktor-exposed/: README.md  build.gradle.kts  settings.gradle.kts
lapis-pgmoon/: .gitignore  README.md  nginx.conf
laravel-eloquent/: README.md
laravel-eloquent/app/Models/: Complaints.php
node-express-sequelize/: Dockerfile  README.md  package.json  server.js
plumber-dbplyr/: Dockerfile  README.md  api.R  main.R  testing_dbplyr.R
plumber-rpostgresql/: Dockerfile  README.md  api.R  main.R
rails-active-record/: Gemfile  README.md
rails-active-record/app/views/layouts/: application.html.erb
rails-active-record/config/: application.rb  credentials.yml.enc  routes.rb
rails-active-record/config/environments/: production.rb
rails-active-record/db/: schema.rb
rails-active-record/spec/: spec_helper.rb
rocket-diesel/: Cargo.toml  README.md  Rocket.toml
rocket-diesel/src/: main.rs
test_suite/: locustfile.py  pyproject.toml
test_suite/results/: locust_failures.csv  locust_stats.csv  locust_stats_history.csv
(+2 files in other folders)
